--- a/index.html
+++ b/index.html
@@ -1,179 +1,196 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="apple-touch-icon" href="img/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="css/plugins/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<link rel="apple-touch-icon" href="img/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/plugins/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-
-<body>
-	<div class="container-fluid">
-		<div class="row creator-pizza">
-			<div class="col-10">
-				<h2>Pizza's constructor</h2>
-				<div class="row">
-					<div class="col-3 creator-pizza-left">
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Ham
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Salami
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Bacon
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Champignon
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Chicken
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-					</div>
-					<div class="col-6 creator-pizza-center">
-						<div class="current-pizza">
-							<div class="current-pizza-item testo"></div>
-							<div class="current-pizza-item osnova"></div>
-							<div class="current-pizza-item vetchina"></div>
-							<div class="current-pizza-item kolbasa"></div>
-							<div class="current-pizza-item bekon"></div>
-							<div class="current-pizza-item shampinion"></div>
-							<div class="current-pizza-item chiken"></div>
-							<div class="current-pizza-item mozzarella"></div>
-							<div class="current-pizza-item ananas"></div>
-							<div class="current-pizza-item perec"></div>
-							<div class="current-pizza-item tomat"></div>
-							<div class="current-pizza-item olives"></div>
-						</div>
-					</div>
-					<div class="col-3 creator-pizza-right">
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Mozzarella
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Pineapple
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Bell pepper
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Tomato
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Olives
-								<input type="checkbox"><span class="checkmark"> </span>
-							</label>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="select-drink-wrapper">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-12">
-					<div class="flex-wrapper">
-						<div class="select-drink-item" data-name="cola classic">
-							<img src="img/drinks/cola.png">
-							<div class="volume">0.5</div>
-							<div class="summa">95₽</div>
-						</div>
-						<div class="select-drink-item active" data-name="cola zero">
-							<img src="img/drinks/cola_zero.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="sprite">
-							<img src="img/drinks/sprite.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="fanta">
-							<img src="img/drinks/fanta.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="fuzetea green">
-							<img src="img/drinks/fuzetea_green.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="fuzetea black">
-							<img src="img/drinks/fuzetea_black.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="fuzetea orange">
-							<img src="img/drinks/fuzetea_orange.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="pulpy">
-							<img src="img/drinks/pulpy.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-						<div class="select-drink-item" data-name="water">
-							<img src="img/drinks/water.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.29$</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row option-delivery">
-			<div class="col-4"></div>
-			<div class="col-4"></div>
-			<div class="col-4">
-				<div class="option-delivery-right">
-					<div class="total-amount"><span class="text">Total:</span><span class="summa">5.36$</span>
-					</div>
-					<button class="typical-btn make-an-order">Make order</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="modal-window none">
-		<div class="modal-window__content">
-			<p class="modal-window__subject">
-				<span class="modal-window__ingredients"></span>
-				<span class="modal-window__drinks"></span>
-			</p>
-			<button class="modal-window__submit-btn">
-				Order
-			</button>
-		</div>
-	</div>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-</body>
-
+  <body>
+    <div class="container-fluid">
+      <div class="row creator-pizza">
+        <div class="col-10">
+          <h2>Pizza's constructor</h2>
+          <div class="row">
+            <div class="col-3 creator-pizza-left">
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="ham"
+                  >Ham <input type="checkbox" /><span class="checkmark"></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="salami"
+                  >Salami <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="bakon"
+                  >Bacon <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="champignon"
+                  >Champignon <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="chicken"
+                  >Chicken <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+            </div>
+            <div class="col-6 creator-pizza-center">
+              <div class="current-pizza">
+                <div class="current-pizza-item dough"></div>
+                <div class="current-pizza-item foundation"></div>
+                <div class="current-pizza-item ham"></div>
+                <div class="current-pizza-item salami"></div>
+                <div class="current-pizza-item bakon"></div>
+                <div class="current-pizza-item champignon"></div>
+                <div class="current-pizza-item chicken"></div>
+                <div class="current-pizza-item mozzarella"></div>
+                <div class="current-pizza-item pineapple"></div>
+                <div class="current-pizza-item pepper"></div>
+                <div class="current-pizza-item tomato"></div>
+                <div class="current-pizza-item olives"></div>
+              </div>
+            </div>
+            <div class="col-3 creator-pizza-right">
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="mozzarella"
+                  >Mozzarella <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="pineapple"
+                  >Pineapple <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="pepper"
+                  >Bell pepper <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="tomato"
+                  >Tomato <input type="checkbox" /><span
+                    class="checkmark"
+                  ></span>
+                </label>
+              </div>
+              <div class="topping-item">
+                <label class="container-custom-checkbox" data-name="olives"
+                  >Olives <input type="checkbox" /><span class="checkmark">
+                  </span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="select-drink-wrapper">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="flex-wrapper">
+              <div class="select-drink-item" data-name="cola classic">
+                <img src="img/drinks/cola.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">95₽</div>
+              </div>
+              <div class="select-drink-item active" data-name="cola zero">
+                <img src="img/drinks/cola_zero.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="sprite">
+                <img src="img/drinks/sprite.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="fanta">
+                <img src="img/drinks/fanta.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="fuzetea green">
+                <img src="img/drinks/fuzetea_green.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="fuzetea black">
+                <img src="img/drinks/fuzetea_black.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="fuzetea orange">
+                <img src="img/drinks/fuzetea_orange.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="pulpy">
+                <img src="img/drinks/pulpy.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+              <div class="select-drink-item" data-name="water">
+                <img src="img/drinks/water.png" />
+                <div class="volume">0.5</div>
+                <div class="summa">1.29$</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row option-delivery">
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <div class="option-delivery-right">
+            <div class="total-amount">
+              <span class="text">Total:</span><span class="summa">5.36$</span>
+            </div>
+            <button class="typical-btn make-an-order">Make order</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal-window none">
+      <div class="modal-window__content">
+        <p class="modal-window__subject">
+          <span class="modal-window__ingredients"></span>
+          <span class="modal-window__drinks"></span>
+        </p>
+        <button class="modal-window__submit-btn">Order</button>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
