add data-value for ingredients and drinks in index.html and function calculateTotal in main.js

--- a/index.html
+++ b/index.html
@@ -22,33 +22,48 @@
           <div class="row">
             <div class="col-3 creator-pizza-left">
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="ham"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="ham"
+                  data-value="1.2"
                   >Ham <input type="checkbox" /><span class="checkmark"></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="salami"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="salami"
+                  data-value="1.2"
                   >Salami <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="bakon"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="bakon"
+                  data-value="1.4"
                   >Bacon <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="champignon"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="champignon"
+                  data-value="1"
                   >Champignon <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="chicken"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="chicken"
+                  data-value="0.8"
                   >Chicken <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
@@ -73,35 +88,50 @@
             </div>
             <div class="col-3 creator-pizza-right">
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="mozzarella"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="mozzarella"
+                  data-value="0.5"
                   >Mozzarella <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="pineapple"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="pineapple"
+                  data-value="0.5"
                   >Pineapple <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="pepper"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="pepper"
+                  data-value="0.4"
                   >Bell pepper <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="tomato"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="tomato"
+                  data-value="0.5"
                   >Tomato <input type="checkbox" /><span
                     class="checkmark"
                   ></span>
                 </label>
               </div>
               <div class="topping-item">
-                <label class="container-custom-checkbox" data-name="olives"
+                <label
+                  class="container-custom-checkbox"
+                  data-name="olives"
+                  data-value="0.3"
                   >Olives <input type="checkbox" /><span class="checkmark">
                   </span>
                 </label>
@@ -116,47 +146,83 @@
         <div class="row">
           <div class="col-12">
             <div class="flex-wrapper">
-              <div class="select-drink-item" data-name="cola classic">
+              <div
+                class="select-drink-item"
+                data-name="cola classic"
+                data-value="1.29"
+              >
                 <img src="img/drinks/cola.png" />
                 <div class="volume">0.5</div>
-                <div class="summa">95₽</div>
+                <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item active" data-name="cola zero">
+              <div
+                class="select-drink-item"
+                data-name="cola zero"
+                data-value="1.29"
+              >
                 <img src="img/drinks/cola_zero.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="sprite">
+              <div
+                class="select-drink-item"
+                data-name="sprite"
+                data-value="1.29"
+              >
                 <img src="img/drinks/sprite.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="fanta">
+              <div
+                class="select-drink-item"
+                data-name="fanta"
+                data-value="1.29"
+              >
                 <img src="img/drinks/fanta.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="fuzetea green">
+              <div
+                class="select-drink-item"
+                data-name="fuzetea green"
+                data-value="1.29"
+              >
                 <img src="img/drinks/fuzetea_green.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="fuzetea black">
+              <div
+                class="select-drink-item"
+                data-name="fuzetea black"
+                data-value="1.29"
+              >
                 <img src="img/drinks/fuzetea_black.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="fuzetea orange">
+              <div
+                class="select-drink-item"
+                data-name="fuzetea orange"
+                data-value="1.29"
+              >
                 <img src="img/drinks/fuzetea_orange.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="pulpy">
+              <div
+                class="select-drink-item"
+                data-name="pulpy"
+                data-value="1.29"
+              >
                 <img src="img/drinks/pulpy.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
               </div>
-              <div class="select-drink-item" data-name="water">
+              <div
+                class="select-drink-item"
+                data-name="water"
+                data-value="1.29"
+              >
                 <img src="img/drinks/water.png" />
                 <div class="volume">0.5</div>
                 <div class="summa">1.29$</div>
@@ -173,7 +239,7 @@
         <div class="col-4">
           <div class="option-delivery-right">
             <div class="total-amount">
-              <span class="text">Total:</span><span class="summa">5.36$</span>
+              <span class="text">Total:</span><span class="summa">0$</span>
             </div>
             <button class="typical-btn make-an-order">Make order</button>
           </div>
