add style for nodal windows, changed modal window content in index.html, add function orderBtn, preoareModal, showThanksModal in main.js

--- a/index.html
+++ b/index.html
@@ -248,10 +248,7 @@
     </div>
     <div class="modal-window none">
       <div class="modal-window__content">
-        <p class="modal-window__subject">
-          <span class="modal-window__ingredients"></span>
-          <span class="modal-window__drinks"></span>
-        </p>
+        <p class="modal-window__subject"></p>
         <button class="modal-window__submit-btn">Order</button>
       </div>
     </div>
